--- a/css/style.css
+++ b/css/style.css
@@ -1,166 +1,366 @@
-body {
-    width: 100%;
-    background-image: url(../images/img-2.jpeg);
-}
-/* utility */
+/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');*/
+
 * {
-    margin: 0;
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
-    font-family: ‘Red Rose’, cursive;
 }
-/* navbar-section */
-.logo {
-    border-radius: 50%;
-    height: 80px;
-    width: 80px;
+
+:root {
+    --tenne-tawny: #f00a0ae0;
+    --tenne-tawny-dark: #8e0707;
 }
-.navbar-brand {
-    font-family: ‘Stoke’, serif;
-    text-align: center;
-    position: relative;
-    margin: 0 0 0 500px;
-    font-size: 40px;
+
+body {
+    font-weight: 300;
+    font-size: 1.05rem;
+    line-height: 1.6;
+    font-family: 'Times New Roman', Times, serif;
 }
-li {
-    list-style-type: none;
-}
-.list {
-    display: flex;
-}
-.list li {
-    color: #FF4433;
-    margin: 0 30px;
-    font-size: 25px;
-}
-.button {
-    display: inline-block;
-    background-color: #FF505F;
-    border: none;
-    color: #fff;
-    padding: 8px 30px;
-    font-size: 18px;
-}
-/* end of navbar-section */
-/* Jumbotron with animation */
-.jumbotron {
-    background-image: url(../images/heading-image.png);
-    background-repeat: no-repeat;
-    background-size: auto;
-    width: 100%;
-    height: 20%;
-    margin-top: 20px;
-    background-position: 25%, 0, 0, 0;
-}
-.display-1 {
-    color: #FF505F;
-    z-index: 1;
-    text-align: center;
-    margin: 0 auto;
-    font-size: 80px;
-    top: 20px;
-    margin-left: 13%;
-    position: relative;
-    font-family: cursive;
-    animation-delay: 1s;
-}
-/* end of Jumbotron with animation */
-#container-rows {
-    width: 103%;
-}
-.selections {
-    font-family: ‘Indie Flower’, cursive;
-    text-align: center;
-    color: rgb(193, 20, 20);
-    font-size: 50px;
-}
-.form-check-label {
-    color: rgb(145, 60, 24);
-    font-family: ‘Indie Flower’, cursive;
-    font-size: 24px;
-}
-#foodborder {
-    border: 2px solid black;
-    border-radius: 15px;
-    padding: 20px;
-    width: 100%;
+
+/* Create two equal columns that floats next to each other */
+.column {
     float: left;
-    background-image: url(“../images/chalk.png”);
+    width: 50%;
+    padding: 10px;
+    height: 300px;
+    /* Should be removed. Only for demonstration */
 }
-#drinkborder {
-    border: 2px solid black;
-    border-radius: 15px;
-    padding: 20px;
-    width: 100%;
-    float: right;
-    background-image: url(“../images/chalk.png”);
+
+/* Clear floats after the columns */
+.column-name:after {
+    content: "";
+    display: table;
+    clear: both;
 }
-.remove {
-    display: none;
+
+/*  */
+.btn {
+    font-family: inherit;
+    cursor: pointer;
+    outline: 0;
+    font-size: 1.05rem;
 }
-#card {
-    max-width: 100%;
-    margin-top: 20px;
-    position: relative;
-    right: 2px;
+
+.text {
+    opacity: 0.8;
 }
-.card-img-top {
-    max-width: 90%;
-    margin: auto;
-    margin-top: 20px;
-    position: relative;
+
+.first-title {
+    font-size: 2rem;
+    margin-bottom: 1rem;
 }
-.drinkCard-img-top {
-    max-width: 100%;
-    position: relative;
+
+.second-title {
+    margin-top: -25px;
+    font-size: 25px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-#save_value {
-    border-radius: .25rem;
-    background-color: #6B992F;
-    ;
-    border-color: #6B992F;
-    ;
-    color: white;
+
+/*  */
+.container {
+    min-height: 100vh;
 }
-#save_drink {
-    border-radius: .25rem;
-    background-color: #6B992F;
-    border-color: #6B992F;
-    color: white;
-}
-.drinkCard {
-    max-width: 100%;
-    margin-top: 20px;
-    position: relative;
-    left: 2px;
-}
-.display-1 {}
-/* Project-Team Section*/
-#project-team {
-    width: 100%;
-    background-image: url(../images/team-image.jpeg);
-    align-items: center;
-}
-.main-container {
+
+.meal-wrapper {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    background: #fff;
     text-align: center;
 }
-.row {
-    width: 1000px;
+
+.meal-search {
+    margin: 2rem 0;
 }
-.team {
-    color: rgb(193, 20, 20);
-    font-size: 40px;
-    margin-bottom: 20px;
-    margin-left: 56%;
+
+.meal-search cite {
+    font-size: 1rem;
 }
-/* footer-section */
-#footer {
-    background-color: #221C07 !important;
+
+.meal-search-box {
+    margin: 1.2rem 0;
+    display: flex;
+    align-items: stretch;
 }
-#links {
-    margin-top: 30px;
+
+.search-control,
+.search-btn {
+    width: 100%;
 }
-#bottom-section {
-    color: #FFFFFF !important;
+
+.search-control {
+    width: 50%;
+    margin-left: 20%;
+    padding: 0 1rem;
+    font-size: 1.1rem;
+    font-family: cursive;
+    outline: 0;
+    border: 1px solid var(--tenne-tawny);
+    color: var(--tenne-tawny);
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
 }
-/* footer-section */
+
+.search-control::placeholder {
+    color: var(--tenne-tawny);
+}
+
+.search-btn {
+    width: 55px;
+    height: 55px;
+    margin-left: -1.6px;
+    font-size: 1.8rem;
+    background: var(--tenne-tawny);
+    color: #fff;
+    border: none;
+    border-top-right-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+    transition: all 0.4s linear;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+}
+
+.search-btn:hover {
+    background: var(--tenne-tawny-dark);
+}
+
+.meal-result {
+    margin-top: 4rem;
+}
+
+#meal {
+    margin: 2.4rem 0;
+}
+
+.meal-item {
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.79);
+    margin: 2rem 0;
+}
+
+.meal-img img {
+    width: 100%;
+    display: block;
+}
+
+.meal-name {
+    padding: 1.5rem 0.5rem;
+}
+
+.meal-name h3 {
+    font-size: 1.4rem;
+}
+
+.recipe-btn {
+    text-decoration: none;
+    color: #fff;
+    background: var(--tenne-tawny);
+    font-weight: 500;
+    font-size: 1.1rem;
+    padding: 0.75rem 0;
+    display: block;
+    width: 175px;
+    margin: 1rem auto;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+    transition: all 0.4s linear;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+}
+
+.recipe-btn:hover {
+    background: var(--tenne-tawny-dark);
+}
+
+/* meal details */
+.meal-details {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    color: #fff;
+    background: var(--tenne-tawny);
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    width: 90%;
+    height: 90%;
+    overflow-y: scroll;
+    display: none;
+    padding: 2rem 0;
+}
+
+.meal-details::-webkit-scrollbar {
+    width: 10px;
+}
+
+.meal-details::-webkit-scrollbar-thumb {
+    background: #f0f0f0;
+    border-radius: 2rem;
+    -webkit-border-radius: 2rem;
+    -moz-border-radius: 2rem;
+    -ms-border-radius: 2rem;
+    -o-border-radius: 2rem;
+}
+
+
+/* js related */
+.showRecipe {
+    display: block;
+}
+
+.meal-details-content {
+    margin: 2rem;
+}
+
+.meal-details-content p:not(.recipe-category) {
+    padding: 1rem 0;
+}
+
+.recipe-close-btn {
+    position: absolute;
+    right: 2rem;
+    top: 2rem;
+    font-size: 1.8rem;
+    background: #fff;
+    border: none;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0.9;
+}
+
+.recipe-title {
+    letter-spacing: 1px;
+    padding-bottom: 1rem;
+}
+
+.recipe-category {
+    background: #fff;
+    font-weight: 600;
+    color: var(--tenne-tawny);
+    display: inline-block;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.3rem;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
+}
+
+.recipe-category {
+    background: #fff;
+    font-weight: 600;
+    color: var(--tenne-tawny);
+    display: inline-block;
+    padding: 0.2rem 0.5rem;
+    border-radius: 0.3rem;
+    -webkit-border-radius: 0.3rem;
+    -moz-border-radius: 0.3rem;
+    -ms-border-radius: 0.3rem;
+    -o-border-radius: 0.3rem;
+}
+
+.recipe-instruct {
+    padding: 1rem 0;
+}
+
+.recipe-meal-img img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    margin: 0 auto;
+    display: block;
+}
+
+.recipe-link {
+    margin: 1.4rem 0;
+}
+
+.recipe-link a {
+    color: #151010;
+    font-size: 1.2rem;
+    font-weight: 700;
+    transition: all 0.4s linear;
+    -webkit-transition: all 0.4s linear;
+    -moz-transition: all 0.4s linear;
+    -ms-transition: all 0.4s linear;
+    -o-transition: all 0.4s linear;
+}
+
+.recipe-link a:hover {
+    opacity: 0.8;
+}
+
+
+/*  */
+.notFound {
+    grid-template-columns: 1fr !important;
+    color: var(--tenne-tawny);
+    font-size: 1.8rem;
+    font-weight: 600;
+    width: 100%;
+}
+
+
+
+/* Media Queries */
+@media screen and (min-width: 600px) {
+    .meal-search-box {
+        width: 540px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    #meal {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }
+
+    .meal-item {
+        margin: 0;
+    }
+
+    .meal-details {
+        width: 700px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    #meal {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
