--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
 
 /*  */
 .container {
-    min-height: 100vh;
+  /*  min-height: 100vh;*/
 }
 
 .meal-wrapper {
@@ -70,11 +70,11 @@ body {
     text-align: center;
 }
 
-.meal-search {
+.search {
     margin: 2rem 0;
 }
 
-.meal-search cite {
+.search cite {
     font-size: 1rem;
 }
 
