--- a/css/style-movies.css
+++ b/css/style-movies.css
@@ -18,6 +18,7 @@
     padding: 10px;
     width: min(300px, 30%);
     min-width: 300px;
+    background-color: whitesmoke;
 
     border-radius: 1rem;
     box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.79);
