Added save history functionality

--- a/css/style.css
+++ b/css/style.css
@@ -124,3 +124,13 @@ li {
     color: #fff3ec !important;
 }
 /* footer-section */
+
+/* Search History */
+
+.hidden{
+    visibility: hidden;
+}
+
+.visible{
+    visibility: visible;
+}
