--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 body {
     width: 100%;
-    background-color: #55423d;
+    background-color: #d90d0de0;
 }
+
 /* utility */
 * {
     margin: 0;
@@ -10,16 +11,33 @@ body {
     font-family: 'DM Sans', sans-serif;
 }
 
-h1 {
-    font-weight: 700;
+/* navbar-section */
+.navbar {
+    position: absolute;
+    background-color: #271b1b !important;
 }
 
-/* navbar-section */
+.navbar-brand {
+    color: #b9c4dc !important;
+    font-style: italic;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 40px;
+}
+
+.nav-item a {
+    color: #ffffff !important;
+    font-size: 30px;
+    padding: 25px;
+    text-indent: 25px;
+    font-family: Georgia, 'Times New Roman', Times, serif
+}
+
 .logo {
     border-radius: 50%;
     height: 80px;
     width: 80px;
 }
+
 .navbar-brand {
     font-family: 'DM Sans', sans-serif;
     text-align: center;
@@ -28,36 +46,60 @@ h1 {
     font-size: 40px;
     background-color: #271c19;
 }
+
 li {
     list-style-type: none;
 }
+
 .list {
     display: flex;
 }
+
 .list li {
     color: #fffffe;
     margin: 15px 15px;
     font-size: 25px;
 }
+
 .button {
     display: inline-block;
-    background-color:#fffffe;
+    background-color: #fffffe;
     border: none;
     color: #fff;
     padding: 8px 30px;
     font-size: 18px;
 }
+
 /* end of navbar-section */
+
 /* Jumbotron */
 .jumbotron {
     background-color: transparent;
-    color: #fff3ec;
-    width: 100%;
-    height: 20%;
-    background-position: 25%, 0, 0, 0;
+    color: #fff;
+    margin-left: 100px;
     padding-top: 15%;
-    padding-bottom: 10%;
 }
+
+.jumbotron-title {
+    font-family: fantasy;
+    color: rgb(254, 250, 0);
+    font-size: 40px;
+}
+
+.jumbotron-description {
+    font-family: cursive;
+    color: #fff;
+    font-size: 20px;
+    padding: 15px;
+    margin-right: 100px;
+    text-align: center;
+}
+
+.jumbotron-image {
+    margin-left: 19%;
+    margin-top: 20px;
+}
+
 .display-1 {
     color: #fffffe;
     z-index: 1;
@@ -68,10 +110,13 @@ li {
     margin-left: 13%;
     position: relative;
 }
+
 /* end of Jumbotron*/
+#search-bar {
+    background-image: url("..//images/img-3.png");
+}
 
 /* Generate Area!!! */
-
 #container-rows {
     width: 100%;
     color: #fff3ec;
@@ -81,56 +126,125 @@ li {
     font-weight: 500;
 }
 
+/* Previous-searches */
 #prev-searches {
+    background-image: url(..//images/img-5.jpeg);
+    width: 100%;
+    margin-top: -6%;
+    color: #fff3ec;
+    text-align: left;
+    padding: 2%;
+}
+
+.prv-search {
+    font-size: 2.8rem;
+    text-align: center;
+    color: #ff0000e0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+#history-btn {
+    color: #f00a0ae0;
+    background-color: #fff;
+    border-color: #f00a0ae0;
+    border-radius: 0.5rem;
+    width: 10%;
+    margin-left: 45%;
+}
+
+/*about-section*/
+.about-section {
     width: 100%;
     color: #fff3ec;
     text-align: left;
     padding: 2%;
 }
 
-#about {
-    width: 100%;
-    color: #fff3ec;
-    text-align: left;
-    padding: 2%;
+.about-title {
+    margin-top: 30px;
+    text-align: center;
+    font-family: cursive;
+    font-weight: bold;
+    color: rgb(255, 209, 109);
+}
+
+.about-description {
+    margin-top: 20px;
+    text-align: center;
+    line-height: 2;
+    font-family: fantasy;
 
 }
 
+/* project-team section*/
 #project-team {
-    width: 100%;
-    background-image: url(../images/team-image.jpeg);
-    align-items: center;
+    background-image: url(..//images/img-4.jpeg);
 }
+
+.bg-secondary {
+    background-color: #fff !important;
+    ;
+}
+
 .main-container {
     text-align: center;
 }
+
 .row {
     width: 1000px;
 }
-.team {
-    color: #fffffe;
-    font-size: 40px;
-    margin-bottom: 20px;
-    margin-left: 56%;
+
+.heading {
+    margin-top: 25px;
+    font-family: 'Times New Roman', Times, serif;
+    color: #f00a0ae0;
+    font-size: 30px;
+    font-weight: bold;
 }
+
+.btn-primary {
+    color: #f00a0ae0;
+    background-color: #fff;
+    border-color: #f00a0ae0;
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+
+}
+
+.team {
+    color: #f00a0ae0;
+    font-size: 50px;
+    margin-bottom: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+/* end of project-team section*/
+
 /* footer-section */
 #footer {
     background-color: #271c19 !important;
 }
-#links {
+
+.col-lg-6 {
     margin-top: 30px;
 }
+
 #bottom-section {
-    color: #fff3ec !important;
+    color: #fff !important;
+    margin-left: 90px;
 }
+
 /* footer-section */
 
 /* Search History */
 
-.hidden{
+.hidden {
     visibility: hidden;
 }
 
-.visible{
+.visible {
     visibility: visible;
 }
