--- a/css/style-recipe.css
+++ b/css/style-recipe.css
@@ -5,16 +5,14 @@
 }
 
 :root {
-    --tenne-tawny: #f00a0ae0;
-    --tenne-tawny-dark: #8e0707;
+    --ghost-white: #ededf4;
+    --taupe-gray: #88898e;
+    --raisin-black: #101112;
+    --night: #090a0b;
+    --chocolate-cosmos: #641424;
+    --madder: #b4001e;
 }
 
-body {
-    font-weight: 300;
-    font-size: 1.05rem;
-    line-height: 1.6;
-    font-family: 'Times New Roman', Times, serif;
-}
 
 /*  */
 .btn {
@@ -28,104 +26,18 @@ body {
     opacity: 0.8;
 }
 
-/* .first-title {
-    font-size: 3.5rem;
-    margin-bottom: 1rem;
-    color: #f00a0ae0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-.second-title {
-    margin-top: -25px;
-    font-size: 25px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
-
-/* h2-section */
-/* #recipe-heading {
-    font-family: 'Times New Roman', Times, serif;
-    color: white;
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    font-size: 2.5rem;
-    padding: 1rem;
-    font-weight: bold;
-} */ 
-
-/*  */
-
-.meal-wrapper {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    background: #fff;
-    text-align: center;
-}
-
-.search {
-    margin: 2rem 0;
-}
-
-.search cite {
-    font-size: 1rem;
-}
-
-.meal-search-box {
-    margin: 1.2rem 0;
-    display: flex;
-    align-items: stretch;
-}
-
-.search-control,
-.search-btn {
-    width: 100%;
-}
-
-.search-control {
-    width: 50%;
-    margin-left: 21%;
-    padding: 0 1rem;
-    font-size: 1.1rem;
-    font-family: cursive;
-    outline: 0;
-    border: 1px solid var(--tenne-tawny);
-    color: var(--tenne-tawny);
-    border-top-left-radius: 2rem;
-    border-bottom-left-radius: 2rem;
-}
-
-.search-control::placeholder {
-    color: var(--tenne-tawny);
-}
-
-.search-btn {
-    width: 55px;
-    height: 55px;
-    margin-left: -1.7px;
-    font-size: 1.8rem;
-    background: var(--tenne-tawny);
-    color: #fff;
-    border: none;
-    border-top-right-radius: 2rem;
-    border-bottom-right-radius: 2rem;
-    transition: all 0.4s linear;
-    -webkit-transition: all 0.4s linear;
-    -moz-transition: all 0.4s linear;
-    -ms-transition: all 0.4s linear;
-    -o-transition: all 0.4s linear;
-}
-
-.search-btn:hover {
-    background: var(--tenne-tawny-dark);
-}
 
 .meal-result {
     margin-top: 4rem;
+    justify-content: center;
+    align-items: center;
 }
 
 #meal {
     margin: 2.4rem 0;
+    justify-content: center;
+    align-items: center;
+    
 }
 
 .meal-item {
@@ -150,19 +62,26 @@ body {
 }
 
 .meal-name h3 {
-    color: #f00a0ae0;
-    font-family: 'Times New Roman', Times, serif;
+    color: var(--madder);
+    font-family: 'Koulen';
     font-size: 20px;
     padding-top: 10px;
     font-weight: bold;
     text-align: center;
 }
 
+#recipe-container{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
 .recipe-btn {
     text-decoration: none;
     color: #fff;
     text-align: center;
-    background: var(--tenne-tawny);
+    background: var(--madder);
     font-weight: 500;
     font-size: 1.1rem;
     padding: 0.75rem 0;
@@ -173,7 +92,8 @@ body {
 }
 
 .recipe-btn:hover {
-    background: var(--tenne-tawny-dark);
+    background: var(--chocolate-cosmos);
+    color: var(--ghost-white);
 }
 
 /* meal details */
@@ -187,7 +107,7 @@ body {
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     color: #fff;
-    background: var(--tenne-tawny);
+    background: var(--madder);
     border-radius: 1rem;
     -webkit-border-radius: 1rem;
     -moz-border-radius: 1rem;
@@ -247,18 +167,9 @@ body {
     opacity: 0.9;
 }
 
-/* .recipe-title {
-    color: black;
-    text-align: justify;
-    font-family: fantasy;
-    font-size: 30px;
-    letter-spacing: 1px;
-    padding-bottom: 1rem;
-} */
-
 .recipe-category {
     font-weight: 600;
-    color: var(--tenne-tawny);
+    color: var(--madder);
     display: inline-block;
     padding: 0.2rem 0.5rem;
     border-radius: 0.3rem;
@@ -271,7 +182,7 @@ body {
 .recipe-category {
     background: black;
     font-weight: 600;
-    color: var(--tenne-tawny);
+    color: var(--madder);
     display: inline-block;
     padding: 0.2rem 0.5rem;
     border-radius: 0.3rem;
@@ -281,15 +192,10 @@ body {
     -o-border-radius: 0.3rem;
 }
 
-/* .recipe-heading {
-    color: #fff;
-    font-size: 30px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-} */
 
 .recipe-details {
     color: #fff;
-    font-family: cursive;
+    font-family: 'Space Mono', monospace;
 }
 
 .recipe-instruct {
@@ -334,21 +240,13 @@ body {
 /*  */
 .notFound {
     grid-template-columns: 1fr !important;
-    color: var(--tenne-tawny);
+    color: var(--madder);
     font-size: 1.8rem;
     font-weight: 600;
     width: 100%;
 }
 
 /* Media Queries */
-@media screen and (min-width: 600px) {
-    .meal-search-box {
-        width: 540px;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
 @media screen and (min-width: 768px) {
     #meal {
         display: grid;
