Updated navbar colour

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ p{
 
 /* navbar-section */
 .navbar {
-    background-color: var(--chocolate-cosmos) !important;
+    background-color: var(--madder) !important;
 }
 
 .nav-item a {
